--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,10 @@ body {
   color: chocolate;
 }
 
+.searchBar {
+  border-radius: 5px;
+}
+
 /* .App-logo {
   height: 40vmin;
   pointer-events: none;
